// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render negative change in rate 1`] = `
Array [
  <span>
    XLM/USD: 
    0.025
     
    <span
        style={
            Object {
                "color": "red",
              }
        }
    >
        -1.52%
    </span>
</span>,
]
`;

exports[`render positive change in rate 1`] = `
Array [
  <span>
    XLM/USD: 
    0.020
     
    <span
        style={
            Object {
                "color": "green",
              }
        }
    >
        +2.1%
    </span>
</span>,
]
`;
